--- a/css/home_style.css
+++ b/css/home_style.css
@@ -49,11 +49,6 @@ header {
 .header__menu__item:nth-child(3) {
     margin: 0;
 }
-
-.last_image {
-    /**/
-}
-
 /******************MAIN**********************/
 main {
     margin: 0 auto;
@@ -64,7 +59,39 @@ main {
 .main_hbox {
     display: flex;
     margin-bottom: 15px;
+}
 
+.main__form__box__second {
+    padding: 10px 40px 20px 40px;
+    border: 1px solid #E3E3E3;
+    border-radius: 10px;
+    position: relative;
+    z-index: 10;
+    display: none;
+}
+
+.bg {
+    border-radius: 10px;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    background-color: #FFFFFF;
+    opacity: 0.8;
+}
+
+.back_btn {
+    margin-bottom: 10px;
+    color: #C6C6C6;
+    cursor: pointer;
+    width: 30%;
+    display: none;
+}
+
+.back_btn:hover {
+    color: #1E1E1E;
 }
 
 .main_hbox>img {
@@ -107,7 +134,7 @@ input[type=text] {
     line-height: 71.5%;
 }
 
-input[type=submit] {
+.first_form input[type=button] {
     border: 1px solid #EEEEEE;
     border-radius: 26px;
     padding: 10px 5px 10px 5px;
@@ -123,22 +150,339 @@ input::-webkit-calendar-picker-indicator {
     margin-top: 7px;
 }
 
-input[type=submit]:hover {
+.first_form input[type=button]:hover {
     border: 1px solid #00A3FF;
     background-color: #00A3FF;
     color: #FFFFFF;
     transition: 0.2s;
 }
 
+.find_btn {
+    cursor: pointer;
+    color: #FFFFFF;
+    border: none;
+    background-color: #00A3FF;
+    border-radius: 26px;
+    padding: 10px 10px 10px 10px;
+    width: 80px;
+    text-align: center;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 71.5%;
+}
+
+.find_btn:hover {
+    background-color: #005C8F;
+    transition: 0.2s;
+}
+
+.clear_btn {
+    background: none;
+    color: #C6C6C6;
+    border: none;
+    cursor: pointer;
+    font-size: 14px;
+}
+
+.clear_btn:hover {
+    color: #1E1E1E;
+}
+
 .map__box {
     margin: 0 auto;
     text-align: center;
+    z-index: -100;
+    position: absolute;
+    top: 380px;
 }
 
-.map__box>img {
+.map__box img {
     width: 70%;
+
 }
 
+.second_form {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    font-size: 14px;
+    z-index: 100;
+}
+
+.second_form input {
+    font-size: 14px;
+}
+
+.temp>input {
+    width: 40px;
+    text-align: left;
+}
+
+.time>input {
+    width: 80px;
+}
+
+input[type='radio']:after {
+    content: '';
+    display: inline-block;
+    visibility: visible;
+
+}
+
+input[type='radio']:checked:after {
+    width: 15px;
+    height: 15px;
+    border-radius: 15px;
+    left: -1px;
+    position: relative;
+    background-color: #00A3FF;
+    content: '';
+    display: inline-block;
+    visibility: visible;
+}
+
+.lang>input {
+    width: 120px;
+}
+
+.btns {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.btns input:nth-child(1) {
+    margin-bottom: 10px;
+}
+
+.road input {
+    width: 80px;
+}
+
+.child {
+    width: 20%;
+}
+
+.stay {
+    width: 25%;
+}
+
+.timeroad input {
+    width: 50px;
+}
+
+.timeroad input::placeholder {
+    transform: translateX(10px);
+}
+
+.more {
+    width: 20px;
+    text-align: center;
+    color: #C6C6C6;
+    font-size: 14px;
+    cursor: pointer;
+    margin: 0 auto;
+}
+
+.more:hover {
+    color: #1E1E1E;
+}
+
+.road {
+    display: none;
+}
+
+.timeroad {
+    display: none;
+}
+
+.entry {
+    display: none;
+}
+
+.stay {
+    display: none;
+}
+
+.close {
+    width: 10px;
+    height: 10px;
+    border-top: 2px solid #C6C6C6;
+    border-right: 2px solid #C6C6C6;
+    display: none;
+    margin: 0 auto;
+}
+
+.close-trans {
+    transform: rotate(-45deg);
+    cursor: pointer;
+}
+
+.close-trans:hover {
+    border-top: 2px solid #1E1E1E;
+    border-right: 2px solid #1E1E1E;
+}
+
+.point {
+    align-items: center;
+    text-align: center;
+    color: #FFFFFF;
+    font-size: 12px;
+    position: absolute;
+    z-index: -99;
+    display: none;
+}
+
+.point img {
+    width: 10px;
+}
+
+.you {
+    color: #00A3FF;
+}
+
+.main__form__box__third {
+    display: none;
+}
+
+.third_form {
+    display: flex;
+}
+
+.filters_box {
+    padding: 10px 40px 20px 40px;
+    border: 1px solid #E3E3E3;
+    border-radius: 10px;
+    width: 25%;
+    height: 100px;
+}
+.backsite{
+    filter: blur(1px);
+}
+.filters_box input[type="text"] {
+    width: 40px;
+    text-align: left;
+}
+.filters_box input[type="button"] {
+    width: 80px;
+    position: absolute;
+    z-index: 2;
+    background: none;
+    overflow: 0.8;
+    padding: 5px 10px 5px 10px;
+    border-radius: 15px;
+    color: #808080;
+    top:270px;
+    left:545px;
+
+}
+.filters_box input[type="button"]:hover{
+    background-color: #808080;
+    color: #EEEEEE;
+    transition: 0.2s;
+}
+.result_box{
+    padding: 10px 40px 20px 40px;
+    border: 1px solid #E3E3E3;
+    border-radius: 10px;
+    width: 100%;
+    height: 150px;
+    margin-left: 5px;
+}
+.countr__box{
+    display: flex;
+    justify-content: space-between;
+}
+.res_text{
+    font-size:24px;
+}
+.line{
+    width: 100%;
+    height: 1px;
+    background-color: #D9D9D9;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+.countr__box__item{
+    text-align: center;
+}
+.countr__box__item input{
+    background: none;
+    color: #00A3FF;
+    border: 2px solid #00A3FF;
+    border-radius: 15px;
+    padding: 5px 10px 5px 10px;
+    margin-top: 5px;
+    width:100%;
+    margin-left: 10px;
+}
+.countr__box__item input:hover{
+    background: #00A3FF;
+    color: #FFFFFF;
+    transition: 0.2s;
+}
+.dot img{
+    width: 10px;
+    
+}
+.dot{
+    align-items: center;
+    text-align: center;
+    position: absolute;
+    display: none;
+}
+.usa{
+    top: 465px;
+    left: 650px;
+}
+.usa2{
+    top: 525px;
+    left: 720px;
+}
+.canada{
+    top: 480px;
+    left: 690px;
+}
+.russia{
+    top: 480px;
+    left: 1050px;
+}
+.china{
+    top: 540px;
+    left: 1050px;
+}
+.japan{
+    top: 530px;
+    left: 1100px;
+}
+.main__form__box__fourth{
+    padding: 10px 40px 20px 40px;
+    border: 1px solid #E3E3E3;
+    border-radius: 10px;
+}
+.lastback{
+    margin-bottom: 5px;
+    color: #C6C6C6;
+    cursor: pointer;
+}
+.lastback:hover{
+    color:#1E1E1E;
+}
+.cnt_name{
+    font-size: 24px;
+    margin-bottom: 5px;
+}
+.top_box{
+    display: flex;
+    justify-content: space-between;
+}
+.info_link{
+    color:#00A3FF;
+}
+.info_link:hover{
+    color:#005C8F;
+}
 /******************FOOTER**********************/
 footer {
     background-color: #363636;
@@ -169,10 +513,11 @@ footer {
     font-size: 14px;
 }
 
-.footer__box__third > a {
+.footer__box__third>a {
     color: #FFFFFF;
     font-size: 14px;
 }
-.footer__box__third > a:nth-child(1){
+
+.footer__box__third>a:nth-child(1) {
     margin-right: 20px;
 }
