--- a/css/info_style.css
+++ b/css/info_style.css
@@ -11,6 +11,7 @@ body {
     min-height: 100%;
     display: grid;
     grid-template-rows: auto 1fr auto;
+    user-select: none;
 }
 
 /******************HEADER**********************/
